--- a/3enraya.html
+++ b/3enraya.html
@@ -5,13 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 en raya</title>
-</head>
-<body>
     
-</body>
-</html>
-<html>
-<head>
 </head>
 <body>
     <style>
@@ -32,19 +26,19 @@
     <h1>3 EN RAYA</h1>
     <table>
         <tr>
-            <td><div ><button></button class="boton1"></div></td>
-            <td><div ><button></button class="boton2"></div></td>
-            <td><div ><button></button class="boton3"></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
         </tr>
         <tr>
-            <td><div ><button></button class="boton4"></div></td>
-            <td><div ><button></button class="boton5"></div></td>
-            <td><div ><button></button class="boton6"></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
         </tr>
         <tr>
-            <td><div ><button></button class="boton7"></div></td>
-            <td><div ><button></button class="boton8"></div></td>
-            <td><div ><button></button class="boton9"></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
+            <td><div ><button class="boton"></button></div></td>
         </tr>
     </table>
     <script src="3enraya.js"></script>
